2004-03-25  Tim-Philipp Müller <t.i.m@zen.co.uk>

	reviewed by: David Schleef  <ds@schleef.org>

	* configure.ac: Check bison version (bug #127838)

2004-03-25  David Schleef  <ds@schleef.org>

	* docs/gst/gstreamer-docs.sgml: More fine tuning.
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/gstautoplug.sgml:
	* docs/gst/tmpl/gststaticautoplug.sgml:
	* docs/gst/tmpl/gststaticautoplugrender.sgml:
	* docs/gst/tmpl/gstutils.sgml:
	* docs/gst/tmpl/gstxml.sgml:

2004-03-24  David Schleef  <ds@schleef.org>

	* docs/gst/gstreamer-docs.sgml:  I got tired of the reference
	manual being such complete crap, that I decided to do major
	hacking of it.  This checkin replaces any fine tuning that
	may have been done previously, with the benefit of actually
	being complete for much of the API that was changed since
	0.6.  Further fine tuning will occur shortly.  (bug #134721)
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/tmpl/GstBin.sgml:
	* docs/gst/tmpl/GstBuffer.sgml:
	* docs/gst/tmpl/GstCaps.sgml:
	* docs/gst/tmpl/GstClock.sgml:
	* docs/gst/tmpl/GstCompat.sgml:
	* docs/gst/tmpl/GstData.sgml:
	* docs/gst/tmpl/GstElement.sgml:
	* docs/gst/tmpl/GstEvent.sgml:
	* docs/gst/tmpl/GstIndex.sgml:
	* docs/gst/tmpl/GstStructure.sgml:
	* docs/gst/tmpl/GstTag.sgml:
	* docs/gst/tmpl/cothreads.sgml:
	* docs/gst/tmpl/cothreads_compat.sgml:
	* docs/gst/tmpl/gettext.sgml:
	* docs/gst/tmpl/grammar.tab.sgml:
	* docs/gst/tmpl/gst-i18n-app.sgml:
	* docs/gst/tmpl/gst-i18n-lib.sgml:
	* docs/gst/tmpl/gst.sgml:
	* docs/gst/tmpl/gst_private.sgml:
	* docs/gst/tmpl/gstaggregator.sgml:
	* docs/gst/tmpl/gstarch.sgml:
	* docs/gst/tmpl/gstatomic.sgml:
	* docs/gst/tmpl/gstatomic_impl.sgml:
	* docs/gst/tmpl/gstbin.sgml:
	* docs/gst/tmpl/gstbuffer.sgml:
	* docs/gst/tmpl/gstbufferstore.sgml:
	* docs/gst/tmpl/gstcaps.sgml:
	* docs/gst/tmpl/gstclock.sgml:
	* docs/gst/tmpl/gstcompat.sgml:
	* docs/gst/tmpl/gstconfig.sgml:
	* docs/gst/tmpl/gstcpu.sgml:
	* docs/gst/tmpl/gstdata.sgml: